--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 </div>
             </div>
             <ul class="nav-list">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="navi/about/index.html">About</a></li>
-                <li><a href="navi/contact/index.html">Contact</a></li>
+                <li><a href="https://homelander-007.github.io/Notes-PDF/">Home</a></li>
+                <li><a href="https://homelander-007.github.io/Notes-PDF-about/">About</a></li>
+                <li><a href="https://homelander-007.github.io/Notes-PDF-contact/">Contact</a></li>
             </ul>
         </nav>
     </header>
