--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href="notes/coa/index.html"><div class="grid-item"><h1>COMPUTER O&A</h1></div></a>
             <a href="notes/evs/index.html"><div class="grid-item"><h1>Environmental Studies</h1></div></a>
             <a href="notes/m3/index.html"><div class="grid-item"><h1>Mathematics-3</h1></div></a>
-            <a href="notes/dsa/index.html"><div class="grid-item"><h1>Data structure</h1></div></a>
+            <a href="https://homelander-007.github.io/Notes-PDF-DSA/"><div class="grid-item"><h1>Data structure</h1></div></a>
             <a href="notes/py/index.html"><div class="grid-item"><h1>PYTHON</h1></div></a>
             <a href="notes/ie/index.html"><div class="grid-item"><h1>Industrial engineering</h1></div></a>
             <a href="notes/cryp/index.html"><div class="grid-item"><h1>Cryptography</h1></div></a>
