--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="notes/py/index.html"><div class="grid-item"><h1>PYTHON</h1></div></a>
             <a href="notes/ie/index.html"><div class="grid-item"><h1>Industrial engineering</h1></div></a>
             <a href="notes/cryp/index.html"><div class="grid-item"><h1>Cryptography</h1></div></a>
-            <a href="https://homelander-007.github.io/Notes-PDF-share/.html"><div class="grid-item"><h2>&#x271A;<br>ADD NEW NOTES</h1></div></a>
+            <a href="https://homelander-007.github.io/Notes-PDF-share/"><div class="grid-item"><h2>&#x271A;<br>ADD NEW NOTES</h1></div></a>
         </div>  
     </section>
     <!-- <section id="features">
