--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
     <section id="features">
         <h2>Subjects</h2>
         <div class="grid-container">
-            <a href="notes/dm/index.html"><div class="grid-item"><h1>Discrete mathematics</h1></div></a>
-            <a href="notes/cg/index.html"><div class="grid-item"><h1>Computer graphics</h1></div></a>
-            <a href="notes/coa/index.html"><div class="grid-item"><h1>COMPUTER O&A</h1></div></a>
-            <a href="notes/evs/index.html"><div class="grid-item"><h1>Environmental Studies</h1></div></a>
-            <a href="notes/m3/index.html"><div class="grid-item"><h1>Mathematics-3</h1></div></a>
-            <a href="https://homelander-007.github.io/Notes-PDF-DSA/"><div class="grid-item"><h1>Data structure</h1></div></a>
-            <a href="notes/py/index.html"><div class="grid-item"><h1>PYTHON</h1></div></a>
-            <a href="notes/ie/index.html"><div class="grid-item"><h1>Industrial engineering</h1></div></a>
-            <a href="notes/cryp/index.html"><div class="grid-item"><h1>Cryptography</h1></div></a>
-            <a href="https://homelander-007.github.io/Notes-PDF-share/"><div class="grid-item"><h2>&#x271A;<br>ADD NEW NOTES</h1></div></a>
+            <a href="notes/dm/index.html"><div class="grid-item"><h2>Discrete mathematics</h2></div></a>
+            <a href="notes/cg/index.html"><div class="grid-item"><h2>Computer graphics</h2></div></a>
+            <a href="notes/coa/index.html"><div class="grid-item"><h2>COMPUTER O&A</h2></div></a>
+            <a href="notes/evs/index.html"><div class="grid-item"><h2>Environmental Studies</h2></div></a>
+            <a href="notes/m3/index.html"><div class="grid-item"><h2>Mathematics-3</h2></div></a>
+            <a href="notes/dsa/index.html"><div class="grid-item"><h2>Data structure</h2></div></a>
+            <a href="notes/py/index.html"><div class="grid-item"><h2>PYTHON</h2></div></a>
+            <a href="notes/ie/index.html"><div class="grid-item"><h2>Industrial engineering</h2></div></a>
+            <a href="notes/cryp/index.html"><div class="grid-item"><h2>Cryptography</h2></div></a>
+            <a href="navi/upload/index.html"><div class="grid-item"><h2>&#x271A;<br>ADD NEW NOTES</h2></div></a>
         </div>  
     </section>
     <!-- <section id="features">
