--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <h2>Subjects</h2>
         <div class="grid-container">
             <a href="https://homelander-007.github.io/Notes-PDF-DM/"><div class="grid-item"><h2>Discrete mathematics</h2></div></a>
-            <a href="https://homelander-007.github.io/Notes-PDF-Cryptography/"><div class="grid-item"><h2>Computer graphics</h2></div></a>
-            <a href="https://homelander-007.github.io/Notes-PDF-Cryptography/"><div class="grid-item"><h2>COMPUTER O&A</h2></div></a>
-            <a href="https://homelander-007.github.io/Notes-PDF-Cryptography/"><div class="grid-item"><h2>Environmental Studies</h2></div></a>
-            <a href="https://homelander-007.github.io/Notes-PDF-Cryptography/"><div class="grid-item"><h2>Mathematics-3</h2></div></a>
+            <a href="https://homelander-007.github.io/Notes-PDF-CG/"><div class="grid-item"><h2>Computer graphics</h2></div></a>
+            <a href="https://homelander-007.github.io/Notes-PDF-COA/"><div class="grid-item"><h2>COMPUTER O&A</h2></div></a>
+            <a href="https://homelander-007.github.io/Notes-PDF-EVS/"><div class="grid-item"><h2>Environmental Studies</h2></div></a>
+            <a href="https://homelander-007.github.io/Notes-PDF-M3/"><div class="grid-item"><h2>Mathematics-3</h2></div></a>
             <a href="https://homelander-007.github.io/Notes-PDF-DSA"><div class="grid-item"><h2>Data structure</h2></div></a>
             <a href="https://homelander-007.github.io/Notes-PDF-PY"><div class="grid-item"><h2>PYTHON</h2></div></a>
             <a href="https://homelander-007.github.io/Notes-PDF-IE"><div class="grid-item"><h2>Industrial engineering</h2></div></a>
