--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </section> -->
     <section id="contact">
-        <h2>Contact Us</h2>
+        <h2>Thanks for visiting</h2>
         <p>Get in touch with us for more information.</p>
     </section>
     <footer>
