--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="hero">
         <h1>Welcome to Notes-PDF</h1> 
         <p>Notes for B.tech Students</p>
-        <a href="https://homelander-007.github.io/Notes-PDF-about/" class="btn">Learn More</a>
+        <a href="https://homelander-007.github.io/Notes-PDF-learn/" class="btn">Learn More</a>
     </section>
     <section id="features">
         <h2>Subjects</h2>
