--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="https://homelander-007.github.io/Notes-PDF-PY"><div class="grid-item"><h2>PYTHON</h2></div></a>
             <a href="https://homelander-007.github.io/Notes-PDF-IE"><div class="grid-item"><h2>Industrial engineering</h2></div></a>
             <a href="https://homelander-007.github.io/Notes-PDF-Cryptography/"><div class="grid-item"><h2>Cryptography</h2></div></a>
-            <a href="https://homelander-007.github.io/Notes-PDF-share/"><div class="grid-item"><h2>&#x271A;<br>ADD NEW NOTES</h2></div></a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe-oZ5IU8vhqezoN364kszsv3HNSUT1n_5KrHsvlUE2fHr1EQ/viewform"><div class="grid-item"><h2>&#x271A;<br>ADD NEW NOTES</h2></div></a>
         </div>  
     </section>
     <!-- <section id="features">
