--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon"  href="logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.js">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9780920787666149"
+     crossorigin="anonymous"></script>
 </head>
 <body id="index-body">
     <video autoplay muted loop playsinline id="videoBG" poster="video_bg.webp">
