--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="200.gif" alt="">
                 </div>
                 <div>
-                    <p>Notes-PDF</p>
+                    <p>Notes-Yard</p>
                 </div>
             </div>
             <ul class="nav-list">
