--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <ul class="nav-list">
-                <li><a href="https://homelander-007.github.io/Notes-PDF/">Home</a></li>
+                <li><a href="https://notesyard.netlify.app/">Home</a></li>
                 <li><a href="https://homelander-007.github.io/Notes-PDF-about/">About</a></li>
                 <li><a href="https://homelander-007.github.io/Notes-PDF-contact/">Contact</a></li>
             </ul>
