--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </div>
             <ul class="nav-list">
                 <li><a href="https://notesyard.netlify.app/">Home</a></li>
-                <li><a href="https://homelander-007.github.io/Notes-PDF-about/">About</a></li>
-                <li><a href="https://homelander-007.github.io/Notes-PDF-contact/">Contact</a></li>
+                <li><a href="nav/about/index.html">About</a></li>
+                <li><a href="nav/contact/index.html/">Contact</a></li>
             </ul>
         </nav>
     </header>
