--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="features">
         <h2>Subjects</h2>
         <div class="grid-container">
-            <a href="https://homelander-007.github.io/Notes-PDF-Automata/"><div class="grid-item"><h2>Automata</h2></div></a>
+            <a href="notes/automata/"><div class="grid-item"><h2>Automata</h2></div></a>
             <a href="https://homelander-007.github.io/Notes-PDF-DM/"><div class="grid-item"><h2>Discrete mathematics</h2></div></a>
             <a href="https://homelander-007.github.io/Notes-PDF-CG/"><div class="grid-item"><h2>Computer graphics</h2></div></a>
             <a href="https://homelander-007.github.io/Notes-PDF-COA/"><div class="grid-item"><h2>COMPUTER O&A</h2></div></a>
