--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
         <p>&copy; 2024 Site for notes</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="index.js"></script>
+<!--     <script src="index.js"></script> -->
 </body>
 </html>
